# Etch

./: .gitignore  README.md  main.py  parser.out  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-publish.yml
etch/: __init__.py  api.py  instructions.py  stdlib.py  utils.py
etch/instructions/: __init__.py  operators.py
etch/mixins/: __init__.py
etch/parser/: lexer.py  parser.py
etch/stdlib/: __init__.py  json.py  net.py  str.py
tests/: fizzbuzz.etch  simpletest.etch
