[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Ginger Industries"]
description = "Etch, an easy-to use, high-level, interpreted lang based on Python."
name = "etchlang"
readme = "README.md"
repository = "https://github.com/GingerIndustries/Etch"
version = "0.2.1"
[tool.poetry.dependencies]
python = "^3.8"
sly = "^0.4"
[tool.poetry.dependencies.etchrepl]
optional = true
version = ">=0.1.3"
[tool.poetry.dev-dependencies]
etchrepl = ">=0.1.3"
[tool.poetry.extras]
repl = ["etchrepl"]

[[tool.poetry.packages]]
include = "etch"
